--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,20 @@
 <div class="header">
-    <ul class="header-icons">
-        <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-        <li><a href="#"><i class="fa-sharp fa-solid fa-bell"></i></a></li>
+    <ul class="left">
+        <li><a href="{% url 'index' %}">Home</a></li>
     </ul>
 
+    {% if request.user.is_authenticated %}
     <a href="#">
-        <img src="{{ request.user.profile.basic_information.profile_image.image.url }}">
+        <button type="submit" class="btn btn-submit-btn">Logout</button>
     </a>
+    {% else %}
+    <ul class="menu">
+        <li><a href="{% url 'login' %}">Login</a></li>
+        <li>
+            <a href="{% url 'register' %}">
+                <button class="btn btn-submit-btn" type="submit">Register</button>
+            </a>
+        </li>
+    </ul>
+    {% endif %}
 </div>
