--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    {% include 'header.html' %}
-
-    <main>
     {% if messages %}
     {% include 'messages.html' %}
     {% endif %}
 
-    {% block content %}{% endblock %}
+    {% include 'header.html' %}
+
+    <main>
+        <div class="container">
+            {% block content %}{% endblock %}
+        </div>
     </main>
 </body>
 </html>
