--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
     </ul>
 
     {% if request.user.is_authenticated %}
-    <a href="#">
+    <a href="{% url 'logout' %}">
         <button type="submit" class="btn btn-submit-btn">Logout</button>
     </a>
     {% else %}
