--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -2,4 +2,48 @@
 
 {% block title %}{{ title }}{% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+{% if posts %}
+<div class="post-content">
+    {% for post in posts %}
+    <div class="post">
+        <div class="post-header">
+            <div class="profile-photo-holder">
+                <img class="profile-photo" src="{{ post.user.image.image.url }}" alt="Default profile picture">
+            </div>
+            {% if post.user == request.user %}
+            <div class="post-menu">
+                    <span class="post-menu-dots">
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </span>
+                <ul class="post-menu-nav">
+                    <li>
+                        <a href="{% url 'update-post' post.slug %}"><i class="fa-solid fa-user-pen"></i>Edit</a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'delete-post' post.pk %}"><i class="fa-regular fa-trash-can"></i>Delete</a>
+                    </li>
+                </ul>
+            </div>
+            {% endif %}
+        </div>
+        <div class="post-body">
+            <h2>{{ post.user.username }}</h2>
+            <p>{{ post.created_at|date:"Y-m-d H-i-s" }}</p>
+        </div>
+        <div class="post-info">
+            <div class="post-info-row">
+                <div>
+                    <p>{{ post.title }}</p>
+                </div>
+            </div>
+            <div class="post-info-content">
+                <p>{{ post.content }}</p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+{% endblock %}
