--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ textarea {
     width: 100%;
     height: 100px;
     resize: none;
+    border-radius: var(--radius);
 }
 
 /* Global */
@@ -72,7 +73,6 @@ html, body {
 
 .container {
     display: flex;
-    justify-content: center;
     align-items: center;
     max-width: 1600px;
     padding: 0 20px;
@@ -183,4 +183,155 @@ h1, h2, h3, h4, h5, h6 {
     text-color: var(--white);
     text-align: center;
     background-color: var(--message-success-color);
+}
+
+/* Index */
+.post-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.post {
+    background-color: var(--white);
+    border-radius: var(--radius);
+    padding: 20px;
+}
+
+.post-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile-photo-holder {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.profile-photo {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profile-photo-holder span {
+    position: absolute;
+    bottom: 4px;
+    right: 1px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+}
+
+.profile-photo-holder span.active {
+    background-color: green;
+}
+
+.profile-photo-holder span.on-leave {
+    background-color: blue;
+}
+
+.profile-photo-holder span.inactive {
+    background-color: red;
+}
+
+.post-body {
+    text-align: left;
+    margin: 20px 0;
+}
+
+.post-body h2 {
+    color: black;
+    font-size: 15px;
+    margin-bottom: 5px;
+}
+
+.post-body p {
+    font-weight: 300;
+    font-size: 12px;
+}
+
+.post-info {
+    background-color: var(--neutral-bg);
+    border-radius: var(--radius);
+}
+
+.post-info .post-info-row .info-label {
+    font-weight: 500;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.post-info .post-info-row .info-value {
+    color: black;
+    font-weight: 600;
+    font-size: 12px;
+}
+
+.post-info-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.post-info-row p {
+    font-size: 12px;
+    font-weight: 600;
+    color: black;
+}
+
+.post-info-content {
+    padding: 10px;
+}
+
+.post-info-content p {
+    color: black;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+.post-menu {
+    position: relative;
+}
+
+.post-menu-nav {
+    position: absolute;
+    top: 15px;
+    right: 0;
+    z-index: 2;
+    background-color: var(--neutral-bg);
+    border-radius: var(--radius);
+    padding: 10px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+
+.post-menu-dots {
+    display: inline-block;
+    width: 30px;
+    text-align: right;
+}
+
+.post-menu-dots:hover + .post-menu-nav,
+.post-menu-nav:hover
+{
+    opacity: 1;
+    visibility: visible;
+}
+
+.post-menu-nav a {
+    display: inline-flex;
+    font-size: 12px;
+    align-items: center;
+}
+
+.post-menu-nav a i {
+    width: 20px;
 }
